[package]
name = "wincam"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
image = "0.25.2"
opencv = "0.92.2"

[dependencies.windows]
version = "0.58.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
]
